update architec error